Fix Hero image source in index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>
           <div class="hero-img-container">
             <img
-              src="/img/hero.png"
+              src="./img/hero.png"
               alt="A woman eating healthy food"
               class="hero-image"
             />
