--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css" />
-    <script src="./script.js"></script>
   </head>
   <body>
     <!-- !HEADER / NAV  START -->
@@ -124,7 +123,7 @@
     </main>
     <!-- ?HERO END -->
     <!-- !BRANDING SECTION -->
-    <section class="padding--medium">
+    <section class="padding--medium" id="section1">
       <h2 class="brand-title">AS FEATURED IN</h2>
       <div class="branding flex-center-items center-container">
         <a href="https://www.businessinsider.com/" target="_blank"
@@ -922,5 +921,6 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <script src="./script.js"></script>
   </body>
 </html>
