add href to navbar links s

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
       <nav class="mobile-nav">
         <ul class="ul-nav header--nav flex-center-items">
           <li>
-            <a href="#" class="navigation-menu">How it works</a>
+            <a href="section1" class="navigation-menu">How it works</a>
           </li>
           <li>
-            <a href="#" class="navigation-menu">Meals</a>
+            <a href="section2" class="navigation-menu">Meals</a>
           </li>
           <li>
-            <a href="#" class="navigation-menu">Testimonials</a>
+            <a href="section3" class="navigation-menu">Testimonials</a>
           </li>
           <li>
-            <a href="#" class="navigation-menu">Pricing</a>
+            <a href="section4" class="navigation-menu">Pricing</a>
           </li>
           <li>
-            <a href="#" class="btn--cta btn--tryforfree">Try for free</a>
+            <a href="section5" class="btn--cta btn--tryforfree">Try for free</a>
           </li>
         </ul>
       </nav>
