Add relate id to sections for scrollIntoView

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </main>
     <!-- ?HERO END -->
     <!-- !BRANDING SECTION -->
-    <section class="padding--medium" id="section1">
+    <section class="padding--medium">
       <h2 class="brand-title">AS FEATURED IN</h2>
       <div class="branding flex-center-items center-container">
         <a href="https://www.businessinsider.com/" target="_blank"
@@ -161,7 +161,7 @@
     <!-- ?BRANDING END -->
     <!-- !HOW IT WORKS -->
 
-    <section class="how-it-works center-container padding-medium">
+    <section class="how-it-works center-container padding-medium" id="section1">
       <div>
         <span class="subheading">HOW IT WORKS</span>
         <h2 class="heading">Your daily dose of health in 3 simple steps</h2>
@@ -225,7 +225,7 @@
     </section>
     <!-- ? END -->
     <!-- !MEALS -->
-    <section class="meals--section padding-big">
+    <section class="meals--section padding-big" id="section2">
       <div class="center-container meals-container">
         <div class="center-content">
           <span class="subheading">meals</span>
@@ -521,7 +521,10 @@
     </section>
     <!-- !END OF MEALS -->
     <!-- ?TESTIMONIALS -->
-    <section class="Testomonials main--section grid--cols-gallery">
+    <section
+      class="Testomonials main--section grid--cols-gallery"
+      id="section3"
+    >
       <div class="testomonials--comments">
         <span class="subheading">TESTIMONIALS</span>
         <h2 class="heading">Once you try it, you can't go back</h2>
@@ -668,7 +671,7 @@
     <!-- !TESTIMONIALS -->
     <!-- ?PRICING -->
 
-    <section class="pricing padding-big">
+    <section class="pricing padding-big" id="section4">
       <div class="center-container">
         <span class="subheading">Pricing</span>
         <h2 class="heading">Eating well without breaking the bank</h2>
